--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <input type="file" id="upload" accept="image/*">
     <br><br>
     <canvas id="canvas"></canvas>
+    <br>
+    <img id="imgPreview" style="max-width:100%;display:none;border:1px solid #ccc;margin-top:10px;" alt="Image preview for long-press context menu" />
     <div class="controls">
         <button id="cropBtn">Crop</button>
         <button id="grayBtn">Convert to Grayscale</button>
@@ -27,6 +29,7 @@
         const canvas = document.getElementById('canvas');
         const ctx = canvas.getContext('2d');
         let img = new Image();
+        const imgPreview = document.getElementById('imgPreview');
         let cropping = false;
         let cropStart = null;
         let cropEnd = null;
@@ -44,6 +47,8 @@
                                 canvas.width = img.width;
                                 canvas.height = img.height;
                                 ctx.drawImage(img, 0, 0);
+                                imgPreview.src = img.src;
+                                imgPreview.style.display = 'block';
                             };
                             img.src = evt.target.result;
                         };
@@ -64,6 +69,8 @@
                     canvas.width = img.width;
                     canvas.height = img.height;
                     ctx.drawImage(img, 0, 0);
+                    imgPreview.src = img.src;
+                    imgPreview.style.display = 'block';
                 };
                 img.src = evt.target.result;
             };
@@ -122,6 +129,9 @@
             canvas.width = w;
             canvas.height = h;
             ctx.putImageData(cropped, 0, 0);
+            // Update preview image
+            imgPreview.src = canvas.toDataURL();
+            imgPreview.style.display = 'block';
             cropStart = cropEnd = null;
         };
 
@@ -132,6 +142,9 @@
                 imageData.data[i] = imageData.data[i+1] = imageData.data[i+2] = avg;
             }
             ctx.putImageData(imageData, 0, 0);
+            // Update preview image
+            imgPreview.src = canvas.toDataURL();
+            imgPreview.style.display = 'block';
         };
 
         document.getElementById('downloadBtn').onclick = function() {
